--- a/.github/workflows/BlogDeploy.yml
+++ b/.github/workflows/BlogDeploy.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        PERSONAL_TOKEN: ${{ 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 }}  # 你的个人访问令牌
+        PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}  # 你的个人访问令牌
         EXTERNAL_REPOSITORY: EddyCliff/EddyCliff.github.io  # 你的GitHub Pages仓库
         PUBLISH_BRANCH: main  # 或者是你的GitHub Pages分支
         PUBLISH_DIR: ./
